# git-squish

./: Cargo.toml  LICENSE  README.md  sheepit.toml
.cursor/rules/: rust.mdc
src/: error.rs  lib.rs  main.rs  test_utils.rs
