[package]
name = "git-squish"
description = "A simply git addon which will perform a non-interactive rebase and squash the branch history into a single commit."

edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/git-squish"
version = "0.1.3"

[dependencies]
git2 = "0.19"
git2-ext = "0.6.0"
tempfile = "3.13"
